<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".EmptyTourActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:background="#0000ddff"
            android:onClick="back"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_home"
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:background="#0000ddff"
            android:onClick="goHome"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <ImageView
            android:id="@+id/home_img"
            android:layout_width="30dp"
            android:layout_height="20dp"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:onClick="goHome"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@mipmap/home_foreground" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="18dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/back_foreground" />

    </android.support.constraint.ConstraintLayout>

    <Button
        android:id="@+id/btn_new_tour"
        android:layout_width="190dp"
        android:layout_height="97dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="#ef6b29"
        android:text="@string/new_tour_btn_txt"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:onClick="viewPubs"
        app:layout_constraintBottom_toTopOf="@+id/btn_random_tour"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.363" />

    <Button
        android:id="@+id/btn_random_tour"
        android:onClick="randomTour"
        android:layout_width="190dp"
        android:layout_height="97dp"
        android:layout_marginBottom="140dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:background="#ef6b29"
        android:text="@string/random_tour_btn_txt"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="99dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/black"
        android:text="@string/empty_tour_header"
        android:textColor="#ef6b29"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout" />


</android.support.constraint.ConstraintLayout>